--- a/login/templates/despacho_frigos.html
+++ b/login/templates/despacho_frigos.html
@@ -7,9 +7,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despacho</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css">
 
 
     {% block meta %}
@@ -95,7 +99,7 @@
                             <h3 class="card-title">Pedidos a Despachar</h3>
                         </div>
                         <div class="card-body">
-                            <table id="tabla_repdespacho" class="table table-bordered table-hover ">
+                            <table id="despachoTable" class="table table-bordered table-hover ">
                                 <thead>
                                     <tr>
                                         <th>Consecutivo Cercafe</th>
@@ -317,18 +321,23 @@
 
         {% block javascript %}
         {% include 'adminlte/lib/_scripts.html' %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-        <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
-            type="module"></script>
-            <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-            <!-- jQuery (required by Bootstrap's JS) -->
+        <!-- jQuery -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
         <!-- Bootstrap JS -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <!-- DataTables JS -->
+        <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.11.5/js/dataTables.bootstrap4.min.js"></script>
+        <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <!-- jQuery (required by Bootstrap's JS) -->
+     
 
         <script>
+            
+            $(document).ready(function() {
+                
+            });
             $(document).ready(function () {
                 // Detectar clic en los botones y pasar el id al modal
                 $('.btn-repor').on('click', function () {
@@ -341,11 +350,24 @@
                     $('#granja_id').val(granjaId);
                     $('#frigorifico_id').val(frigorificoId);
                 });
+                $('#despachoTable').DataTable({
+                    "paging": true,
+                    "searching": true,
+                    "ordering": true,
+                    "autoWidth": true,
+                    "responsive": true,
+                    "language": {
+                        "url": "//cdn.datatables.net/plug-ins/1.10.24/i18n/Spanish.json"
+                    },
+                    "pageLength": 10,
+                    "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]],
+                    "order": [[0, "desc"]],
+                    "scrollCollapse": true,
+                    "scrollY": '55vh'
 
-                // Inicializar DataTable
-                $("#tabla_repdespacho").DataTable({
-                    "order": [[0, "desc"]]
                 });
+
+               
                 $('#modalSalidasDespacho').on('show.bs.modal', function(event) {
                     console.log("Modal abierto"); // Verificar si el modal se abre
                     var button = $(event.relatedTarget); // Botón que abrió el modal
